# Fc26-live-editor-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_LE_BRIDGE.md  add_cache_patch.py  fotmob_transfers.json  matches_to_apply.json  mcp_config.json  patch_cache.py  pyproject.toml
backups/: summary_20260706_211412.json
src/fc26_mcp/: __init__.py  fifa_squad.py  le_bridge.lua  mcp_le_bridge.py  mcp_server.py
